samples/_failures_safe/1761556873_c00c1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c763318.c: In function ‘main’:
./samples/SAFE/__tmp_7c763318.c:163:23: error: expected ‘;’ at end of input
  163 |         input[len - 1]
      |                       ^
      |                       ;
./samples/SAFE/__tmp_7c763318.c:163:9: error: expected declaration or statement at end of input
  163 |         input[len - 1]
      |         ^~~~~
./samples/SAFE/__tmp_7c763318.c:163:9: error: expected declaration or statement at end of input
